tests/baselines/reference/esDecorators-classExpression-missingEmitHelpers-classDecorator.16.errors.txt
tests/cases/conformance/esDecorators/classExpression/main.ts(6,11): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/conformance/esDecorators/classExpression/main.ts(6,17): error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/conformance/esDecorators/classExpression/main.ts(6,17): error TS2343: This syntax requires an imported helper named '__propKey' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/conformance/esDecorators/classExpression/main.ts(6,17): error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/conformance/esDecorators/classExpression/main.ts(6,17): error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== tests/cases/conformance/esDecorators/classExpression/main.ts (5 errors) ====
    export {};
    declare var dec: any;
    declare var x: any;
    
    // uses __esDecorate, __runInitializers, __setFunctionName, __propKey
    class C { [x] = @dec class {} }
              ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
                    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__propKey' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    
==== tests/cases/conformance/esDecorators/classExpression/tslib.d.ts (0 errors) ====
    export {}
    